Fixed prod endpoints insta, feed align

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -93,7 +93,7 @@ input[type=search]::-ms-clear {
       @apply col-start-2 col-end-8
     }
     .dre-media-container {
-      @apply rounded-lg text-green-500 mx-auto max-w-3xl p-4 shadow-green-500 drop-shadow-2xl
+      @apply  text-green-500 mx-auto max-w-3xl p-4 shadow-green-500 drop-shadow-2xl
     }
     .dre-media-grid {
       @apply grid grid-cols-1 sm:grid-cols-4
@@ -108,11 +108,18 @@ input[type=search]::-ms-clear {
       @apply py-8
     }
     .dre-media-banner {
-      @apply text-white flex items-center justify-end pb-4  gap-4
+      @apply flex justify-center py-2 rounded-tl-lg rounded-tr-lg
+    }
+    .dre-media-header {
+      @apply w-11/12 text-white flex items-center justify-end gap-4 
     }
     .dre-media-insta-types {
-      @apply w-full h-auto rounded-lg
+      @apply w-11/12 h-auto rounded-lg
     }
+    .dre-media-feed {
+      @apply flex justify-center pb-8 rounded-br-lg rounded-bl-lg
+    }
+
     
     .btn-primary {
       @apply flex mx-auto text-white bg-green-500 border-0 py-2 px-8 focus:outline-none rounded text-lg;
